--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -12,19 +12,17 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/filters.js" th:src="@{/js/filters.js}"></script>
-	<script>
-		function populateFilters(){
-			addOptionsToFilter('lect-options', filters[0], true, 1, false);
-			addOptionsToFilter('major-options', filters[1], true, 1, true);
-			addOptionsToFilter('new-lect-options', filters[0], false, 0, false);
-			addOptionsToFilter('new-major-options', filters[1], false, 0, true);
-			addOptionsToFilter('update-lect-options', filters[0], false, 0, false);
-			addOptionsToFilter('update-major-options', filters[1], false, 0, true);
-			initDropDowns();
-		}
-	</script>
 </head>
-<body onload="getToken(); setDataType('subject', 'id', 1, 1); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); addTokenToLinks(); submitSearch(); makeRequest('/get_subject_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); setDataType('subject', 'id', 1, 1); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); submitSearch(); 
+	makeRequest('/get_subject_filters',[], function(data){
+		addOptionsToFilter('lect-options', data[0], true, 1, false);
+		addOptionsToFilter('major-options', data[1], true, 1, true);
+		addOptionsToFilter('new-lect-options', data[0], false, 0, false);
+		addOptionsToFilter('new-major-options', data[1], false, 0, true);
+		addOptionsToFilter('update-lect-options', data[0], false, 0, false);
+		addOptionsToFilter('update-major-options', data[1], false, 0, true);
+		initDropDowns();
+	});">
 	<div id="background"></div>
 	<div id="wrapper">
 		<header>
@@ -34,13 +32,13 @@
 				<img src="../images/user-img.bmp" id="user-img">
 				<div id="user-options">
 					<button type="button" onclick="toggleElementById('update-self');">Edit user</button>
-					<button type="button" onclick="makeRequest('/logout_req','sendframe', [], function(){window.location.replace('/login');});">Log out</button>
+					<button type="button" onclick="makeRequest('/logout_req', [], function(){window.location.replace('/login');});">Log out</button>
 				</div>
 			</div>
 		</header>
 		<div id="content">
 			<div id="content-header">
-				<form action="/get_subjects" id="search" method="get" target="dataframe">
+				<form action="/get_subjects" id="search" method="post" target="dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
@@ -141,7 +139,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_subject" id="newform" method="get" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_subject" id="newform" method="post" target="sendframe" class="pad-medium wide new-grid">
 					<label for="name">Ime:</label><input type="text" name="name" required>
 					<label for="espb">ESPB:</label><input type="number" min="0" name="espb" required>
 					<label for="year">Godina:</label><input type="number" min="1" max="4" name="year" required>
@@ -175,7 +173,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/update_subject" id="updateform" method="get" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/update_subject" id="updateform" method="post" target="sendframe" class="pad-medium wide new-grid">
 					<label for="new-id">ID:</label><input type="text" name="new-id" required>
 					<label for="name">Ime:</label><input type="text" name="name" required>
 					<label for="espb">ESPB:</label><input type="number" min="0" name="espb" required>
