--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 	<div id="background"></div>
 	<div id="wrapper">
 		<div id="login-wrapper">
-			<form action="/login_req" id="login" target="loginframe">
+			<form action="/login_req" id="login" target="loginframe" method="post">
 				<h2> Log-in: </h2>
 				<br>
 	            <label>Username:</label>
@@ -30,7 +30,6 @@
 			</form>
 		</div>
 		<iframe src="" name="loginframe" id="loginframe" onload="redirect();"></iframe>
-		<iframe src="" name="sendframe" id="sendframe" onload="autoRedirect();"></iframe>
 	</div>
 </body>
 </html>
