--- a/src/main/resources/templates/majors.html
+++ b/src/main/resources/templates/majors.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 </head>
-<body onload="getToken(); setDataType('major', 'id', 0, 0); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); addTokenToLinks(); submitSearch();">
+<body onload="getToken(); setDataType('major', 'id', 0, 0); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); submitSearch();">
 	<div id="background"></div>
 	<div id="wrapper">
 		<header>
@@ -23,13 +23,13 @@
 				<img src="../images/user-img.bmp" id="user-img">
 				<div id="user-options">
 					<button type="button" onclick="toggleElementById('update-self');">Edit user</button>
-					<button type="button" onclick="makeRequest('/logout_req','sendframe', [], function(){window.location.replace('/login');});">Log out</button>
+					<button type="button" onclick="makeRequest('/logout_req', [], function(){window.location.replace('/login');});">Log out</button>
 				</div>
 			</div>
 		</header>
 		<div id="content">
 			<div id="content-header">
-				<form action="/get_all_majors" id="search" method="get" target="dataframe">
+				<form action="/get_all_majors" id="search" method="post" target="dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
@@ -56,7 +56,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_major" id="newform" method="get" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_major" id="newform" method="post" target="sendframe" class="pad-medium wide new-grid">
 					<label for="name">Ime:</label><input type="text" name="name" required>
 				</form>
 				<div class="flex-row wide pad-medium">
@@ -70,7 +70,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/update_major" id="updateform" method="get" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/update_major" id="updateform" method="post" target="sendframe" class="pad-medium wide new-grid">
 					<label for="new-id">ID:</label><input type="text" name="new-id" required>
 					<label for="name">Ime:</label><input type="text" name="name" required>
 					<input type="hidden" name="" id="updated_id" required>
@@ -82,7 +82,6 @@
 			</div>
 		</div>
 
-		<iframe src="" name="sendframe" id="sendframe"></iframe>
 		<iframe src="" name="dataframe" id="dataframe" onload="parseData();"></iframe>
 	</div>
 </body>
