--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -13,17 +13,15 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/filters.js" th:src="@{/js/filters.js}"></script>
-	<script>
-		function populateFilters(){
-			addOptionsToFilter('city-options', filters[0], true, 1, false);
-			addOptionsToFilter('major-options', filters[1], true, 1, true);
-			addOptionsToFilter('new-major-options', filters[1], false, 0, true);
-			addOptionsToFilter('update-major-options', filters[1], false, 0, true);
-			initDropDowns();
-		}
-	</script>
 </head>
-<body onload="getToken(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); addTokenToLinks(); setCustomTable(true); submitSearch(); makeRequest('/get_student_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); setCustomTable(true); submitSearch(); 
+	makeRequest('/get_student_filters', [], function(data){
+		addOptionsToFilter('city-options', data[0], true, 1, false);
+		addOptionsToFilter('major-options', data[1], true, 1, true);
+		addOptionsToFilter('new-major-options', data[1], false, 0, true);
+		addOptionsToFilter('update-major-options', data[1], false, 0, true);
+		initDropDowns();
+	});">
 	<div id="background"></div>
 	<div id="wrapper">
 		<header>
@@ -33,13 +31,13 @@
 				<img src="../images/user-img.bmp" id="user-img">
 				<div id="user-options">
 					<button type="button" onclick="toggleElementById('update-self');">Edit user</button>
-					<button type="button" onclick="makeRequest('/logout_req','sendframe', [], function(){window.location.replace('/login');});">Log out</button>
+					<button type="button" onclick="makeRequest('/logout_req', [], function(){window.location.replace('/login');});">Log out</button>
 				</div>
 			</div>
 		</header>
 		<div id="content">
 			<div id="content-header">
-				<form action="/get_students" id="search" method="get" target="dataframe">
+				<form action="/get_students" id="search" method="post" target="dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
@@ -122,7 +120,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_student" id="newform" method="get" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_student" id="newform" method="post" target="sendframe" class="pad-medium wide new-grid">
 						<label for="first_name">Ime:</label><input type="text" name="first_name" required>
 						<label for="last_name">Prezime:</label><input type="text" name="last_name" required>
 						<label for="year">Godina upisa:</label><input type="number" min="2000" max="2100" name="year" required>
@@ -149,7 +147,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/update_student" id="updateform" method="get" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/update_student" id="updateform" method="post" target="sendframe" class="pad-medium wide new-grid">
 					<label for="firstName">Ime:</label><input type="text" name="firstName" required>
 					<label for="lastName">Prezime:</label><input type="text" name="lastName" required>
 					<label for="new-index">Indeks:</label><input type="text" name="new-index" required>
