--- a/src/main/resources/templates/lecturer.html
+++ b/src/main/resources/templates/lecturer.html
@@ -7,6 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600,800' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
+	<script type="text/javascript" language="Javascript" src="../static/js/showTable.js" th:src="@{/js/showTable.js}"></script>
 </head>
 
 <body>
@@ -37,6 +38,50 @@
 						<td id = "Titula"></td>
 					</tr>
 				</table><!--close table 1-->
+			<div class = "buttons">
+				<input type="button" class = "button" name = "button4" value="Predmeti" onclick='showTable2();'>
+				<input type="button" class = "button" name = "button5" value="Ispitni rokovi" onclick='showTable3();'>
+			</div>
+			<table id = "table2">
+				<tr>
+					<th colspan = "5">Predmeti</th>
+				</tr>
+				<tr>
+					<th>Predmet</th>
+					<th>IDPredmet</th>
+					<th>Godina</th>
+					<th>ESPB</th>
+					<th>Smer</th>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</table><!--close table 2-->
+		<table id = "table3" style = "visibility: hidden;">
+				<tr>
+					<th colspan = "6">Ispitni rokovi</th>
+				</tr>
+				<tr>
+					<th>Predmet</th>
+					<th>IDPredmet</th>
+					<th>Godina</th>
+					<th>ESPB</th>
+					<th>Smer</th>
+					<th>Poeni</th>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</table><!--close table 3-->
 		</div><!--close content-->
 	</div><!--close wrapper-->
 </body>
