Added exmas registration page, updated lecturer page, fixed student loader and page

--- a/src/main/resources/static/css/student-style.css
+++ b/src/main/resources/static/css/student-style.css
@@ -178,3 +178,9 @@ h1 {
 	background-color: var(--color-highlight);
 	cursor: pointer;
 }
+.buttonPrijava{
+	text-align: center;
+	font-size: 20px;
+	cursor: pointer;
+	background-color: var(--color-highlight2) !important;
+}
