--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -5,14 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/student-style.css" th:href="@{/css/student-style.css}"/>
 	<link rel="icon" type="image/x-icon" href="../static/favicon.ico" th:href="@{/favicon.ico}">
 	<meta charset="utf-8">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600,800' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/student-loader.js" th:src="@{/js/student-loader.js}"></script>
-	<script type="text/javascript" language="Javascript" src="../static/js/student-loader-part2.js" th:src="@{/js/student-loader-part2.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/showTable.js" th:src="@{/js/showTable.js}"></script>
 </head>
-<body onload="getToken(); getIndex(); fillTables(); statusBudget(); fillTable456();">
+<body onload="getToken(); getIndex(); makeRequest('/get_student',[['index',index]],function(studentData){loadStudentData(studentData);}); makeRequest('/budget',[['index',index]],function(budzetData){statusBudget(budzetData);});makeRequest('/get_attempts_info_for_index',[['index',index]],function(examsData){loadStudentSubjects(examsData);});">
+	<div id="background"></div>
 	<div id = "wrapper" style="background-image: url('../images/lowpoly.png');">
 		<header>
 			<h1>Student</h1>
@@ -21,7 +20,7 @@
 				<img src="../static/images/user-img.bmp" id="user-img" th:src="@{/images/user-img.bmp}"/>
 				<div id="user-options">
 					<button type="button" onclick="toggleElementById('update-self');">Edit user</button>
-					<button type="button" onclick="makeRequest('/logout_req','sendframe', [], function(){window.location.replace('/login');});">Log out</button>
+					<button type="button" onclick="makeRequest('/logout_req', [], function(){window.location.replace('/login');});">Log out</button>
 				</div><!--close user options-->
 			</div><!--close user-->
 		</header>
@@ -82,7 +81,6 @@
 		</div><!--close class tables-->
 		<input type="button" class = "button" name = "button1" value="Upisani predmeti" onclick='showTable4();'>
 		<input type="button" class = "button" name = "button2" value="Prijava ispita" onclick='showTable5();'>
-		<input type="button" class = "button" name = "button3" value="Ispitni rokovi" onclick='showTable6();'>
 			<table id = "table4" style = "visibility: visible;">
 				<tr>
 					<th colspan = "6">Upisani Predmeti</th>
@@ -105,48 +103,20 @@
 				</tr>
 			</table><!--close table 4-->
 		<table id = "table5" style = "visibility: hidden;">
-				<tr>
-					<th colspan = "6">Prijava ispita</th>
-				</tr>
-				<tr>
-					<th>Predmet</th>
-					<th>IDPredmet</th>
-					<th>Godina</th>
-					<th>ESPB</th>
-					<th>Profesor</th>
-					<th>Smer</th>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-		</table><!--close table 5-->
-		<table id = "table6" style = "visibility: hidden;">
 			<tr>
-				<th colspan = "7">Ispitni rokovi</th>				</tr>
+				<th colspan = "3">Ispitni rokovi</th>				
+			</tr>
 				<tr>
 					<th>Ispitni rok</th>
-					<th>Predmet</th>
-					<th>IDPredmet</th>
-					<th>Godina</th>
-					<th>ESPB</th>
-					<th>Profesor</th>
-					<th>Smer</th>
+					<th>Rok za prijavu</th>
+					<th>Prijava</th>
 				</tr>
 				<tr>
 					<td></td>
 					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				<td></td>
+					<td><input type="button" class = "buttonPrijava" name = "button3" value="Prijavi" onclick=''></td>
 			</tr>
-		</table><!--close table 6-->
+		</table><!--close table 5-->
 		</div><!--close content-->
 	</div><!--close wrapper-->
 	<iframe src="" name="sendframe" id="sendframe"></iframe>
