--- a/src/main/resources/templates/redirect.html
+++ b/src/main/resources/templates/redirect.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
 </head>
-<body class="flex-center">
+<body class="flex-center" onload="checkRedirectServer();">
 	<h2 style="color: white">Redirecting...<h2>
 </body>
 </html>
