--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -13,8 +13,9 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/filters.js" th:src="@{/js/filters.js}"></script>
+	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
 </head>
-<body onload="getToken(); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); setCustomTable(true); submitSearch(); 
+<body onload="checkRedirect(); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); setCustomTable(true); submitSearch(); 
 	makeRequest('/get_student_filters', [], function(data){
 		addOptionsToFilter('city-options', data[0], true, 1, false);
 		addOptionsToFilter('major-options', data[1], true, 1, true);
