Added lecturer loader, fixed lecurer style and updated lecturer page

--- a/src/main/resources/static/css/exams-registration.css
+++ b/src/main/resources/static/css/exams-registration.css
@@ -112,3 +112,10 @@ h1 {
 #tableRegistered>tbody>tr>th{
 	background-color: var(--color-highlight) !important;
 }
+.buttonPrihvati{
+	text-align: center;
+	font-size: 20px;
+	cursor: pointer;
+	background-color: var(--color-highlight2) !important;
+	margin-left: 86%;
+}
