--- a/src/main/resources/templates/exmas-registration.html
+++ b/src/main/resources/templates/exmas-registration.html
@@ -53,6 +53,7 @@
 				<td style = "width: 20%;"><input type="button" class = "buttonClear" name = "button2" value="Obrisi" onclick=''></td>
 			</tr>
 		</table>
+		<input type="button" class = "buttonPrihvati" name = "button1" value="Prihvati" onclick=''>
 		</div><!--close content-->
 	</div><!--close wrapper-->
 	<iframe src="" name="dataframe" id="dataframe" onload = "parseData()"></iframe>
