--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/student-loader.js" th:src="@{/js/student-loader.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/showTable.js" th:src="@{/js/showTable.js}"></script>
 </head>
-<body onload="getToken(); getIndex(); makeRequest('/get_student',[['index',index]],function(studentData){loadStudentData(studentData);}); makeRequest('/budget',[['index',index]],function(budzetData){statusBudget(budzetData);});makeRequest('/get_attempts_info_for_index',[['index',index]],function(examsData){loadStudentSubjects(examsData);});">
+<body onload="getToken(); getIndex(); makeRequest('/get_student',[['index',index]],function(studentData){loadStudentData(studentData);}); makeRequest('/budget',[['index',index]],function(budzetData){statusBudget(budzetData);});makeRequest('/get_subjects_by_student',[['index',index]],function(examsData){loadStudentSubjects(examsData);});">
 	<div id="background"></div>
 	<div id = "wrapper" style="background-image: url('../images/lowpoly.png');">
 		<header>
@@ -114,7 +114,7 @@
 				<tr>
 					<td></td>
 					<td></td>
-					<td><input type="button" class = "buttonPrijava" name = "button3" value="Prijavi" onclick=''></td>
+					<td><a href = "exmas-registration.html">Prijavi</a></td>
 			</tr>
 		</table><!--close table 5-->
 		</div><!--close content-->
