Updated background and buttons on student page

--- a/src/main/resources/templates/exmas-registration.html
+++ b/src/main/resources/templates/exmas-registration.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 </head>
 <body onload="getToken(); getIndex();">
+	<div id="background"></div>
 	<div id = "wrapper" style="background-image: url('../images/lowpoly.png');">
 		<header>
 			<h1>Student</h1>
