--- a/src/main/resources/templates/exams.html
+++ b/src/main/resources/templates/exams.html
@@ -116,7 +116,20 @@
 				</div>
 			</div>
 		</div>
-
+		<div id="update-self">
+			<div class="flex-center">
+				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
+				<form id="userform" action="/update_user" target="_blank" method="post" class="grid">
+					<h2>Update user:</h2><br>
+					<input type="hidden" name="username" id="update-uname">
+					<label for="new-username">Change username:</label>
+					<input type="text" name="new_username">
+					<label for="new-password">Change password:</label>
+					<input type="password" name="new_password">
+					<input type="submit" value="Submit" onclick="toggleElement(this.parentNode.parentNode.parentNode);">
+				</form>
+			</div>
+		</div>
 		<iframe src="" name="sendframe" id="sendframe"></iframe>
 		<iframe src="" name="dataframe" id="dataframe"></iframe>
 	</div>
